project manager added

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "grapesjs": "^0.19.5",
+    "grapesjs-blocks-basic": "^1.0.1",
     "grapesjs-custom-code": "^1.0.1",
     "grapesjs-preset-webpage": "^0.1.11",
+    "grapesjs-project-manager": "^2.0.5",
     "grapesjs-react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
